--- a/app/src/main/res/layout/event_item_detail.xml
+++ b/app/src/main/res/layout/event_item_detail.xml
@@ -14,11 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="2dp"
         android:layout_marginTop="10dp"
         android:text="Severe"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAlignment="center"/>
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/eventTypeText"
@@ -26,9 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="2dp"
         android:text="Joint Pain"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAlignment="center"/>
 
 </LinearLayout>
