--- a/app/src/main/res/layout/event_eye_sight_form.xml
+++ b/app/src/main/res/layout/event_eye_sight_form.xml
@@ -2,58 +2,123 @@
 <com.ewind.hl.ui.view.detail.EyeSightDetailForm xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:paddingStart="10dp"
-        android:text="SPH"/>
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/eyeSightSphere"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="OD: SPH"/>
+
+        <EditText
+            android:id="@+id/eyeSightLeftSphere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal|numberSigned"
+            android:minEms="3"
+            android:maxLength="5"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="CYL"/>
+
+        <EditText
+            android:id="@+id/eyeSightLeftCylinder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal|numberSigned"
+            android:minEms="3"
+            android:maxLength="5"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="AX"/>
+
+        <EditText
+            android:id="@+id/eyeSightLeftAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:minEms="2"
+            android:maxLength="4"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:text="°"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal|numberSigned"
-        android:minEms="3"
-        android:maxLength="5"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="OS: SPH"/>
+
+        <EditText
+            android:id="@+id/eyeSightRightSphere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal|numberSigned"
+            android:minEms="3"
+            android:maxLength="5"/>
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:paddingStart="10dp"
-        android:text="CYL"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="CYL"/>
 
-    <EditText
-        android:id="@+id/eyeSightCylinder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal|numberSigned"
-        android:minEms="3"
-        android:maxLength="5"/>
+        <EditText
+            android:id="@+id/eyeSightRightCylinder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal|numberSigned"
+            android:minEms="3"
+            android:maxLength="5"/>
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:paddingStart="10dp"
-        android:text="AX"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:paddingStart="10dp"
+            android:text="AX"/>
 
-    <EditText
-        android:id="@+id/eyeSightAxis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:minEms="2"
-        android:maxLength="4"/>
+        <EditText
+            android:id="@+id/eyeSightRightAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:minEms="2"
+            android:maxLength="4"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:text="°"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:text="°"/>
+    </LinearLayout>
+
 </com.ewind.hl.ui.view.detail.EyeSightDetailForm>
