Area search activity

--- a/app/src/main/res/layout/view_area_selector.xml
+++ b/app/src/main/res/layout/view_area_selector.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:parentTag="android.support.constraint.ConstraintLayout">
 
-    <Spinner
-        android:id="@+id/areaSpinner"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <TextView
+        android:id="@+id/areaLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:text="Selected area"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/areaLocatorButton"
         app:layout_constraintTop_toTopOf="@id/areaLocatorButton"
