--- a/app/src/main/res/layout/activity_events_list.xml
+++ b/app/src/main/res/layout/activity_events_list.xml
@@ -56,6 +56,14 @@
 
     </LinearLayout>
 
+    <com.ewind.hl.ui.view.area.AreaSelector
+        android:id="@+id/areaSelector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/eventsList"
         android:layout_width="match_parent"
