--- a/app/src/main/res/layout/view_area_selector.xml
+++ b/app/src/main/res/layout/view_area_selector.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    tools:parentTag="android.support.constraint.ConstraintLayout">
+    android:orientation="horizontal"
+    tools:parentTag="android.widget.LinearLayout">
 
     <TextView
         android:id="@+id/areaLink"
@@ -12,19 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        tools:text="Selected area"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/areaLocatorButton"
-        app:layout_constraintTop_toTopOf="@id/areaLocatorButton"
-        app:layout_constraintBottom_toBottomOf="@id/areaLocatorButton"/>
+        android:textColor="@color/colorAccent"
+        android:paddingEnd="5dp"
+        tools:text="Selected area"/>
 
     <ImageView
-        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:id="@+id/areaLocatorButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:tint="@color/colorAccent"
-        android:src="@android:drawable/ic_menu_mylocation" />
+        android:src="@drawable/ic_target"
+        android:tint="@color/colorAccent"/>
 </merge>
