--- a/app/src/main/res/menu/menu_event.xml
+++ b/app/src/main/res/menu/menu_event.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ewind.hl.ui.MainActivity">
     <item
+        android:id="@+id/action_show_all"
+        android:icon="@drawable/ic_expand"
+        android:title="Show all"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
