--- a/app/src/main/res/menu/menu_event.xml
+++ b/app/src/main/res/menu/menu_event.xml
@@ -4,9 +4,16 @@
     tools:context="com.ewind.hl.ui.MainActivity">
     <item
         android:id="@+id/action_show_all"
-        android:icon="@drawable/ic_expand"
+        android:icon="@drawable/ic_collapse"
         android:title="Show all"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="@string/action_export"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
