--- a/app/src/main/res/menu/menu_event.xml
+++ b/app/src/main/res/menu/menu_event.xml
@@ -2,11 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ewind.hl.ui.MainActivity">
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        android:title="@android:string/search_go"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_show_all"
-        android:icon="@drawable/ic_collapse"
-        android:title="Show all"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/show_all"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_export"
