--- a/app/src/main/res/layout/event_button.xml
+++ b/app/src/main/res/layout/event_button.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/eventImage"
         style="@style/AppTheme.IconButton"
-        android:layout_margin="5sp"
+        android:padding="6dp"
         android:src="@drawable/ic_event"
         android:contentDescription="@string/empty" />
 
@@ -19,8 +19,7 @@
         android:id="@+id/eventText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app_name"/>
 
 </LinearLayout>
