--- a/app/src/main/res/layout/event_item_detail.xml
+++ b/app/src/main/res/layout/event_item_detail.xml
@@ -9,7 +9,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/eventIcon">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/eventDetailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:text="Severe"
         android:textAlignment="center"/>
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/eventTypeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
