--- a/app/src/main/res/menu/menu_event.xml
+++ b/app/src/main/res/menu/menu_event.xml
@@ -6,14 +6,14 @@
     <item
         android:id="@+id/action_show_relevant"
         android:title=""
-        android:icon="@drawable/ic_relevant_off"
+        android:icon="@drawable/ic_expand"
         android:visible="false"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/action_show_all"
         android:title=""
-        android:icon="@drawable/ic_relevant_on"
+        android:icon="@drawable/ic_collapse"
         app:showAsAction="always"/>
 
     <item
