--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.history.ListHistoryActivity">
+    tools:context=".ui.history.HistoryActivity">
 
     <com.ewind.hl.ui.view.area.AreaSelector
         android:id="@+id/areaSelector"
