--- a/app/src/main/res/layout/view_chart_bar.xml
+++ b/app/src/main/res/layout/view_chart_bar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="24dp"
     android:layout_height="175dp"
     android:orientation="vertical">
 
@@ -28,8 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:text="31"
         android:textAlignment="center"/>
 
