--- a/app/src/main/res/layout/fragment_history_chart.xml
+++ b/app/src/main/res/layout/fragment_history_chart.xml
@@ -13,10 +13,9 @@
         android:layout_height="177dp"
         app:anchor="center"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
         app:orientation="horizontal"
-        tools:itemCount="50"
-        tools:listitem="@layout/view_chart_bar">
+        tools:itemCount="12"
+        tools:listitem="@layout/view_history_item">
 
     </com.dant.centersnapreyclerview.SnappingRecyclerView>
 
@@ -40,7 +39,41 @@
         style="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintTop_toBottomOf="@id/history_chart"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/chart_high_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        tools:text="Intolerable"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="@id/history_chart"
+        app:layout_constraintEnd_toEndOf="@id/history_chart"/>
+
+    <TextView
+        android:id="@+id/chart_low_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="40dp"
+        tools:text="None"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@id/history_chart"
+        app:layout_constraintEnd_toEndOf="@id/history_chart"/>
+
+    <Spinner
+        android:id="@+id/history_period_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="5dp"
+        android:background="@null"
+        android:spinnerMode="dropdown"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/history_chart" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/events_list"
